--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -309,9 +309,102 @@ html{
     }
 
 }
+//end hello section
 
 
+//start our section
+.our{
+    background-color: #F2F2F2;
+    text-align: center;
+   padding: 150px 0;
+    &-inner{
+    
+        
+    }
+    &-title-small{
+        color: #666262;
+        font-size: 20px;
+        line-height: 28px;
+    }
+    &-title{
+        font-size: 30px;
+        line-height: 38px;
+        padding-top: 35px;
+        padding-bottom: 80px;
+    }
+    &__items{
+        display: flex;
+        justify-content: space-between;
+    }
+    &__item{
+        max-width: 340px;
+        border-radius: 10px;
+        &-div{
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+           max-width: 340px;
+           height: 230px;
+           
+            overflow: hidden;
+        }
+        &-img{
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+           max-width: 340px;
+            height: 230px;
+            
+            transition: all .5s; 
+            &:hover{
+                transform: scale(1.1);
+            }
+        }
+        &__box{
+            position: relative;
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, .2);/* Параметры тени */
+            padding: 20px;
+            text-align: left;
+            &-title{
+                letter-spacing: 1px;
+                font-weight: 700;
+                padding-top: 10px;
+                font-size: 20px;
+                line-height: 28px;
+                padding-bottom: 10px;
+            }
+            &-subtitle{
+                padding-bottom: 40px;
+                font-size: 16px;
+                line-height: 20px;
+                span{
+                    color: #909090;
+                }
+            }
+            &-price{
+                position: absolute;
+                top: 40px;
+                right: 20px;
+                display: inline-block;
+               width: 50px;
+               height: 50px;
+                color: #fff;
+                background-color: $redd;
+                border-radius: 50%;
+                span{
+                    font-weight: 700;                    position: absolute;
+                    transform: translate(-50%, -50%);
+                    left: 50%;
+                    top: 50%;
+                }
+            }
+        }
+    }
+}
+//end our section
 
+
+//
 
 
 
