--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,8 +2,6 @@
 @import "_global";
 @import "_fonts";
 
-
-
 *,
 html {
     box-sizing: border-box;
@@ -14,25 +12,32 @@ html {
     padding: 0;
 }
 body {
+    
     a {
         color: black;
     }
+}
+body.lock{
+    overflow: hidden;
 }
 
 //header start
 .header {
     position: fixed;
-    z-index: 99999;
+    z-index: 9999;
     width: 100%;
     background-color: #171819;
     top: 0;
-    &-logo-link {
-        font-size: 30px;
-        letter-spacing: 2px;
-        color: $redd;
-        padding-right: 10px;
+    &-logo {
+        z-index: 101;
+        &-link {
+         
+            font-size: 30px;
+            letter-spacing: 2px;
+            color: $redd;
+            padding-right: 10px;
+        }
     }
-
     .header__inner {
         height: 60px;
         align-items: center;
@@ -41,6 +46,7 @@ body {
         flex-direction: row;
     }
     &__social {
+        z-index: 101;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -67,20 +73,26 @@ body {
 }
 .menu {
     margin-left: auto;
-    display: flex;
     margin-right: 60px;
+
     &__list {
         margin-top: 5px;
+        flex-direction: row;
+        display: flex;
         &-item {
             font-size: 14px;
             text-transform: uppercase;
-            display: inline-block;
+
             padding: 5px 30px;
             &-link {
                 color: white;
                 padding: 5px 0;
                 border-bottom: solid 1px transparent;
                 transition: all 0.5s;
+                &-active{
+                    border-color: $redd;
+                    color: $redd;
+                }
                 &:hover {
                     border-color: $redd;
                     color: $redd;
@@ -90,12 +102,17 @@ body {
     }
 
     &-burger-icon {
+        z-index: 101;
         margin-right: auto;
         display: none;
         padding-right: 20px;
         svg {
-            margin-left: 20px;
+          
             fill: white;
+        }
+        &-close {
+            display: none;
+            z-index: 1;
         }
     }
 }
@@ -636,5 +653,107 @@ body {
     }
 }
 //end footer
+
+@media screen and (max-width: 1050px) {
+    .shedules__box-time {
+        width: 15%;
+    }
+    .shedules__box__slider {
+        width: 85%;
+    }
+
+    .menu {
+        position: fixed;
+        top: 0px;
+        left: -100%;
+        width: 100%;
+        height: 150%;
+        background-color: rgba(0, 0, 0, 0.9);
+        padding: 70px 30px 30px 30px;
+        overflow: auto;
+        z-index: 100;
+        transition: left .5s;
+       
+     
+        &::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 60px;
+            background-color: #171819;
+            z-index: 2;
+        }
+        &-active {
+          left: 0;
+           
+          
+        }
+        &__list {
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+            &-item {
+                &-link {
+                    font-size: 30px;
+                    border-bottom: 1px solid white;
+                }
+            }
+        }
+        &-burger-icon {
+            display: block;
+            cursor: pointer;
+            &-close {
+                display: block;
+                position: absolute;
+                top: 70px;
+                right: 25px;
+                fill: white;
+            }
+        }
+    }
+    .home {
+        padding: 100px 0;
+    }
+    .newto {
+        &__inner {
+            justify-content: space-between;
+        }
+        &__right {
+            margin-left: 0px;
+            padding-left: 10px;
+            margin-left: -10px;
+            padding-top: 0px;
+            border-left: 1px solid #909090;
+            max-width: 100%;
+            margin-bottom: 10px;
+            &-days {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                padding-top: 20px;
+                li {
+                    padding-right: 30px;
+                    padding-bottom: 10px;
+                    & + li {
+                        padding-top: 0px;
+                    }
+                }
+            }
+        }
+        &__left {
+            margin-bottom: 50px;
+            max-width: 100%;
+            padding-right: 50px;
+            margin-top: 50px;
+        }
+    }
+    .contact {
+        &-inner {
+            flex-wrap: wrap;
+        }
+    }
+}
 
 @import "_media";
