--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -662,7 +662,7 @@ body.lock{
 
 .element-animation {
     opacity: 0;
-    transform: translateY(50%);
+    transform: translateY(100px);
   }
   .element-animation.element-show {
     opacity: 1;
